--- a/projects/projects.json
+++ b/projects/projects.json
@@ -18,7 +18,7 @@
       "category": "basicweb"
     },
     {
-      "name": "Mind Shield",
+      "name": "ShieldMe",
       "desc": "A website focused on emergency preparedness and mental health resources as part of the Infosys Springboard internship. It has SOS Alert, Journal, Chat features in it. Developed using Java.",
       "image": "mindshield",
       "category": "basicweb"
